Removing a lot of warnings and invalid formatting.